[package]
name = "inkstory"
version = "0.2.0"
authors = ["Ruslan Fadeev <github@kinrany.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Convert interactive stories between Instory and Ink formats"
homepage = "https://github.com/kinrany/inkstory"
repository = "https://github.com/kinrany/inkstory"
documentation = "https://docs.rs/inkstory"

[dependencies]
anyhow = "1.0.40"
itertools = "0.10.0"
lazy_static = "1.4.0"
paw = "1.0.0"
regex = "1.5.4"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
structopt = { version = "0.3.21", features = ["paw"] }
ureq = { version = "2.1.0", features = ["json"] }
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde"] }
